Updated design to adjuct the size of the page to phone screen size

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
             <p class="detail">Studying Computer Programming at Seneca.</p>
             <a href="resume.html"><button class="resumeBtn">RESUME</button></a>
         </div>
+        <a href="resume.html"><button class="resumeBtn2">RESUME</button></a>
     </article>
 
     <footer class="bottom">
